# city_chain_project-4

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Docker-compose.yml  README.md  build.rs  cert.crt  city_chain_project-2.code-workspace  immudb_config.json  key.pem  mongodb-windows-x86_64-7.0.14-signed.msi  mongodb_config.json
OpenSSL-Win64/lib/VC/x64/MD/: capi.lib  dasync.lib  ec_internal_test.lib  evp_extra_test2.lib  legacy.lib  libapps.lib  libcommon.lib  liblegacy.lib  loader_attic.lib  openssl.lib  ossltest.lib  padlock.lib
OpenSSL-Win64/tests/: libtestutil.lib  p_minimal.lib  p_test.lib
Strawberry/: README.txt  relocation.txt
Strawberry/perl/lib/: .packlist  Config.pm  Config_heavy.pl  perllocal.pod
Strawberry/perl/lib/CORE/: config.h
Strawberry/perl/lib/auto/Text/Wrap/: .packlist
Strawberry/win32/: Strawberry Perl Release Notes.url  Strawberry Perl Website.url
config/: mongodb_Africa.conf  mongodb_Antarctica.conf  mongodb_Asia.conf  mongodb_Australia.conf  mongodb_Default.conf  mongodb_Europe.conf  mongodb_North America.conf  mongodb_South America.conf  mongodb_analytics.conf
continental_main_chain/: Cargo.toml  Dockerfile
continental_main_chain/src/: main.rs
dapps/: Dockerfile  app.py  asset-manifest.json  index.html  login.html  municipalities.json  ntru.py  package-lock.json  package.json  requirements.txt  transaction.py
dapps/public/: index.html
dapps/src/: App.css  App.js  ReceivePage.js  api.js
dapps/static/: style.css
dapps/static/css/: main.96cb8f02.css
dapps/static/js/: main.1b591aed.js  main.b2afc462.js  main.b2afc462.js.map
docs/: architecture.md  consensus_argorithms.md  data_flow.md  design.md  port_configuration.md  requirements.md
global_main_chain/: Cargo.toml  Dockerfile
global_main_chain/src/: main.rs
immudb_proto/: cargo.toml
immudb_proto/src/: lib.rs
lattice_signer_service/: lattice_signer_service.py  ntru.py  requirements.txt
local_openssl_src/: Cargo.toml
main_chain/: Cargo.toml  Dockerfile
main_chain/src/: main.rs
mobile_app/: app.js  package.json
msys64/: InstallationLog.txt  components.xml  network.xml  uninstall.ini
msys64/etc/: hosts
msys64/home/kibiy/: .bash_history  .bashrc
msys64/home/openssl-3.3.1/: Makefile.in  OpenSSLConfig.cmake  builddata.pm  configdata.pm  installdata.pm  libcrypto.pc  libssl.pc  openssl.pc
msys64/home/openssl-3.3.1/apps/: openssl.rc
msys64/home/openssl-3.3.1/crypto/: buildinf.h
msys64/home/openssl-3.3.1/doc/man/man1/: openssl-cms.1  openssl-crl.1  openssl-dsa.1  openssl-ec.1  openssl-ecparam.1  openssl-engine.1  openssl-errstr.1  openssl-fipsinstall.1  openssl-gendsa.1  openssl-genpkey.1  openssl-genrsa.1  openssl-info.1  openssl-kdf.1  openssl-list.1  openssl-mac.1  openssl-nseq.1  openssl-ocsp.1  openssl-pkcs7.1  openssl-pkeyutl.1  openssl-prime.1  openssl-rand.1  openssl-rehash.1  openssl-s_client.1  openssl-s_server.1  openssl-s_time.1  openssl-sess_id.1  openssl-speed.1  openssl-srp.1  openssl-ts.1  openssl-version.1  openssl-x509.1
msys64/home/openssl-3.3.1/include/openssl/: configuration.h
msys64/home/openssl-3.3.1/util/: wrap.pl
msys64/mingw64/lib/terminfo/73/: sv80
msys64/usr/local/lib64/pkgconfig/: libcrypto.pc
msys64/usr/local/share/man/man1/: genpkey.1ossl  openssl-asn1parse.1ossl  openssl-ca.1ossl  openssl-ciphers.1ossl  openssl-cmp.1ossl  openssl-crl2pkcs7.1ossl  openssl-dgst.1ossl  openssl-dhparam.1ossl  openssl-dsaparam.1ossl  openssl-enc.1ossl  openssl-passwd.1ossl  openssl-pkcs12.1ossl  openssl-pkcs8.1ossl  openssl-pkey.1ossl  openssl-pkeyparam.1ossl  openssl-req.1ossl  openssl-rsa.1ossl  openssl-rsautl.1ossl  openssl-smime.1ossl  openssl-spkac.1ossl  openssl-storeutl.1ossl  (+1 more)
msys64/usr/share/info/: dir
msys64/usr/share/man/man1/: chattr.1  cygcheck.1  cygpath.1  dumper.1  getconf.1  getfacl.1  gmondump.1  intro.1  kill.1  ldd.1  locale.1  lsattr.1  minidumper.1  mkgroup.1  mkpasswd.1  mount.1  newgrp.1  passwd.1  pldd.1  profiler.1  ps.1  regtool.1  setfacl.1  setmetamode.1  ssp.1  strace.1  tzset.1  umount.1
msys64/usr/share/man/man3/: cygwin_attach_handle_to_fd.3  cygwin_conv_path.3  cygwin_conv_path_list.3  cygwin_create_path.3  cygwin_internal.3  cygwin_logon_user.3  cygwin_posix_path_list_p.3  cygwin_set_impersonation_token.3  cygwin_split_path.3  cygwin_stackdump.3  intro.3
msys64/var/cache/pacman/pkg/: curl-8.9.1-1-x86_64.pkg.tar.zst  curl-8.9.1-1-x86_64.pkg.tar.zst.sig  libcurl-8.9.1-1-x86_64.pkg.tar.zst  libcurl-8.9.1-1-x86_64.pkg.tar.zst.sig  mingw-w64-x86_64-crt-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-gdb-15.1-1-any.pkg.tar.zst  mingw-w64-x86_64-gdb-15.1-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-gdb-multiarch-15.1-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-headers-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-libmangle-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst  mingw-w64-x86_64-libmangle-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-tools-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst  mingw-w64-x86_64-tools-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-winpthreads-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst  mingw-w64-x86_64-winpthreads-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst.sig  mingw-w64-x86_64-winstorecompat-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst  mingw-w64-x86_64-winstorecompat-git-12.0.0.r81.g90abf784a-1-any.pkg.tar.zst.sig  texinfo-7.1-3-x86_64.pkg.tar.zst  texinfo-7.1-3-x86_64.pkg.tar.zst.sig  texinfo-tex-7.1-3-x86_64.pkg.tar.zst  texinfo-tex-7.1-3-x86_64.pkg.tar.zst.sig
msys64/var/lib/pacman/sync/: clang32.db  clang32.db.sig  clang64.db  clang64.db.sig  clangarm64.db  clangarm64.db.sig  mingw32.db  mingw32.db.sig  mingw64.db  mingw64.db.sig  ucrt64.db  ucrt64.db.sig
municipal_chain/: CHEDIR.TAG  Cargo.toml  Dockerfile  rustc_info.json
municipal_chain/src/: main.rs
ntru/: Cargo.toml
ntru/src/: lib.rs  ntru_encrypt.rs  ntru_param.rs  ntru_sign.rs
qr_dapps/: app.py  index.html
receiving_dapps/: app.py  requirements.txt
receiving_dapps/static/: index.html  indivisuals.json  login.html
(+51 files in other folders)
