[package]
name = "continental_main_chain"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ntru = { path = "../ntru" }

