[package]
name = "continental_main_chain"
version = "0.1.0"
authors = ["Satoshi Nakamoto <next.teal.organization@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] } 
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
ntru = { path = "../ntru" }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
actix-rt = "2.5"  # または、最新の安定バージョン
futures = "0.3"
mongodb = { version = "2.0.0", default-features = false, features = ["tokio-runtime"] }
bson = "2.0"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"  # 最新のバージョンを指定
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.9"
tonic = { version = "0.7", features = ["tls"] }
prost = "0.9"
immudb_proto = { path = "../immudb_proto" }

[patch.crates-io]
openssl-src = { path = "local_openssl_src" }

[build]
rustflags = ["-L", "native=D:\\city_chain_project\\OpenSSL-Win64\\lib\\VC\\x64\\MD"]

[[bin]]
name = "continental_main_chain"
path = "src/main.rs"