[package]
name = "global_main_chain"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = "0.10"
rand = "0.8"
sha2 = "0.9"  # SHA256ハッシュ関数の追加
hex = "0.4"   # Hexエンコード/デコード用の追加
ntru = { path = "../ntru" }  # ローカル依存関係として追加
