[package]
name = "global_main_chain"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ntru = { path = "../ntru" }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"

[patch.crates-io]
openssl-src = { path = "local_openssl_src" }

[[bin]]
name = "global_main_chain"
path = "src/main.rs"