[package]
name = "municipal_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ntru = { path = "../ntru" }
sha2 = "0.9" 
tokio = { version = "1.8", features = ["full"], optional = true }

[features]
default = ["dpos", "proof_of_place", "proof_of_history", "sha2"]

[dependencies.rust-crypto]
version = "0.2"
optional = true

[dependencies.hex]
version = "0.4"
optional = true

[dependencies.base64]
version = "0.13"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.slog]
version = "2.7"
optional = true

[dependencies.slog-async]
version = "2.7"
optional = true

[dependencies.slog-term]
version = "2.7"
optional = true

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
chrono = "0.4"
