[package]
name = "ntru"
version = "0.1.0"
edition = "2021"

[lib]
name = "ntru"
path = "src/lib.rs"

[[bin]]
name = "ntru_example"
path = "src/bin/ntru_example.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.9"
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4"
