[package]
name = "ntru"
version = "0.1.0"
edition = "2021"

[lib]
name = "ntru"
path = "src/lib.rs"

[[bin]]
name = "ntru_example"
path = "src/bin/ntru_example.rs"

[dependencies]
rand = "0.8" # 乱数生成に使用
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # JSONのシリアライズとデシリアライズに使用
sha2 = "0.9.9" # SHA-256などのハッシュ関数に使用
chrono = { version = "0.4.19", features = ["serde"] } # 時間管理
hex = "0.4" # バイトデータを16進数表記に変換するために使用

# NTRU（量子耐性暗号）関連の依存ライブラリ
ntru = "0.1.0" # NTRU暗号ライブラリ
pqcrypto-traits = "0.6.0" # ポスト量子暗号の共通インターフェース
pqcrypto-ntruprime = "0.6.0" # NTRU PrimeアルゴリズムのRust実装
pqcrypto = { version = "0.6.0", features = ["ntruprime"] } # NTRU Prime暗号を有効化

[features]
default = ["ntruprime"]
